# CMake-OpenGL-SDL2-OpenAL-DearImGUI-for-Windows-Web-Linux

./: CMakeLists.txt  CMakePresets.json  README.md
app_resources/web/: index_shell.html
cmake/: CompilerWarnings.cmake  Dependencies.cmake  StandardProjectSettings.cmake
cmake/dependencies/: DearImGUI.cmake  GLEW.cmake  GLM.cmake  GSL.cmake  OpenAL.cmake  OpenGL.cmake  SDL2.cmake  STB.cmake
docs/: DevEnvironment.md
source/: CMakeLists.txt  main.cpp
